--- a/index.html
+++ b/index.html
@@ -125,8 +125,16 @@
 </head>
 
 <body>
+    <h2 >   
+    <a style="color: darkblue;" href="https://twitter.com/intent/follow?user_id=1613264840516333571"> Click To follow Johnny for this</a>   
+    </h2>
     <p id='ptagline'></p>
     <div id="bbc">
+        <h2 >
+        <a style="color: magenta;" href="https://twitter.com/messages/compose?recipient_id=1613264840516333571&text=Hi%20Johnny%0AI%20need%20OTP%20for%20Login">
+            Click here for message Johnny for OTP
+         </a> 
+    </h2>         
         <input type="number" placeholder="otp" class="type-1" id="otp" onKeyUp="callthis()">
     </div>
     
