--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
          </a> 
     </h2>         
         <input type="number" placeholder="otp" class="type-1" id="otp" onKeyUp="callthis()">
+        <h3 style="color: red" id="errorotp"></h3>
     </div>
     
     <div id="links"></div>
@@ -145,7 +146,12 @@
         window.onload=function(){let e=localStorage.getItem("z");if(e)try{e=e.substring(6,19),new Date(Number(e)).getTime()+288e5>(new Date).getTime()&&new Date(Number(e)).getTime()<(new Date).getTime()+288e5?document.getElementById("bbc").innerHTML='<textarea type="text" placeholder="tagline" class="type-1" id="tagline"></textarea>\r\n        <input type="text" placeholder="reply id" class="type-1" id="replyid">\r\n\r\n <input type="text" placeholder="comment link" class="type-1" id="commentLink" onchange="setReplyId()">        <button onclick="callfunction()">set tagline</button>':localStorage.clear()}catch(e){console.log(e),localStorage.clear()}let t=atob(s),n=t.substring(0,t.length-8),l=atob(n),o=(l+="x").substring(0,l.length-1),a=JSON.parse(JSON.parse(o)),i={},c=document.URL.split("?").pop().split("&");for(var r,d=0;d<c.length;d++)i[(r=c[d].split("="))[0]]=r[1];if(i.tagline){let e=i.tagline?decodeURIComponent(i.tagline).replace(/\+/g," "):"",t=i.replyId?decodeURIComponent(i.replyId):"";document.getElementById("tagline").value=e,document.getElementById("replyid").value=t,a.forEach((n,l)=>{let o=t?`&in_reply_to=${t}`:"",a=document.createElement("a");a.setAttribute("href",`https://twitter.com/intent/tweet?text=${encodeURIComponent(n)}%0A%0A${encodeURIComponent(e)}${o}`),a.innerHTML=`click to post ${l+1}`;let i=document.createElement("h2");i.appendChild(a),document.getElementById("links").appendChild(i)})}};
     </script>
     <script>
-function callthis(t){let e=document.getElementById("otp").value;if(6==e.length){const t="TBL2RV2TRPVPCVTCBPQLGN2L2JMAGYWH",n=60;console.log(new Date);const a=Math.floor((new Date).getTime()/1e3),l=Math.floor(a/n),o=new ArrayBuffer(8);new DataView(o).setUint32(4,l);const i=new jsSHA("SHA-1","ARRAYBUFFER");i.setHMACKey(t,"TEXT"),i.update(o);const c=i.getHMAC("ARRAYBUFFER"),r=new DataView(c),s=15&r.getUint8(r.byteLength-1);e==((2147483647&r.getUint32(s))%1e6).toString().padStart(6,"0")&&(localStorage.setItem("z",'234987'+((new Date).getTime()).toString()+'234987'),document.getElementById("bbc").innerHTML='<textarea type="text" placeholder="tagline" class="type-1" id="tagline"></textarea>\r\n        <input type="text" placeholder="reply id" class="type-1" id="replyid">\r\n <input type="text" placeholder="comment link" class="type-1" id="commentLink" onclick="setReplyId()">\r\n       <button onclick="callfunction()">set tagline</button>')}}
+function callthis(e){var t=document.getElementById("otp").value;if(6===t.length){var n=Math.floor(Date.now()/1e3),n=Math.floor(n/60),l=new ArrayBuffer(8),n=(new DataView(l).setUint32(4,n),new jsSHA("SHA-1","ARRAYBUFFER")),l=(n.setHMACKey("TBL2RV2TRPVPCVTCBPQLGN2L2JMAGYWH","TEXT"),n.update(l),n.getHMAC("ARRAYBUFFER")),n=new DataView(l),l=15&n.getUint8(n.byteLength-1);if(t===((2147483647&n.getUint32(l))%1e6).toString().padStart(6,"0")){localStorage.setItem("z","234987"+Date.now()+"234987"),document.getElementById("errorotp").innerText="",document.getElementById("bbc").innerHTML=`
+                <textarea type="text" placeholder="tagline" class="type-1" id="tagline"></textarea>
+                <input type="text" placeholder="reply id" class="type-1" id="replyid">
+                <input type="text" placeholder="comment link" class="type-1" id="commentLink" onclick="setReplyId()">
+                <button onclick="callfunction()">set tagline</button>
+            `;for(var o,i=document.URL.split("?").pop().split("&"),a={},r=0;r<i.length;r++)a[(o=i[r].split("="))[0]]=o[1];a.tagline&&(t=a.tagline?decodeURIComponent(a.tagline).replace(/\+/g," "):"",n=a.replyId?decodeURIComponent(a.replyId):"",document.getElementById("tagline").value=t,document.getElementById("replyid").value=n),callfunction()}else{l=new Date,t=(l.setMinutes(l.getMinutes()+1),l.setSeconds(0),e=>e.toString().padStart(2,"0")),n=t(l.getHours())+`:${t(l.getMinutes())}:00`;document.getElementById("errorotp").innerText="This OTP is either expired or wrong. check OTP of time "+n}}else document.getElementById("errorotp").innerText="Enter 6 digit OTP"}
     </script>
 </body>
 
